--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -4,14 +4,14 @@
     <div class="footer-menu">
       <hr>
       <ul class="f-menu">
-        <li><a routerLink="" data-lang-id="home">Home</a></li>
-        <li><a routerLink="about" data-lang-id="about-hed">Aboout</a></li>
+        <li><a routerLink="" data-lang-id="home">{{"home" | translate}}</a></li>
+        <li><a routerLink="about" data-lang-id="about-hed">{{"about" | translate}}</a></li>
         <!--        <li><a routerLink="contacts" data-lang-id="contacts">Contact</a></li>-->
-        <li><a href="catalog" data-lang-id="catalog">Сatalog</a></li>
-        <li><a routerLink="faq">FAQ</a></li>
+        <li><a href="catalog" data-lang-id="catalog">{{ "catalog" | translate }}</a></li>
+        <li><a routerLink="faq">{{"faq" | translate}}</a></li>
       </ul>
     </div>
-    <p class="translate" data-lang-id="hb">HomeBrilliant is your reliable partner in the world of luxury real estate. Secure yourself a stylish and comfortable future with our unique offers.
+    <p class="translate" data-lang-id="hb">{{"hb" | translate}}
     </p>
     <div class="flex-center">
       <i class="fa fa-github fa-4x icon-3d"></i>
@@ -20,7 +20,7 @@
       <i class="fa fa-instagram fa-4x icon-3d"></i>
     </div>
     <br>
-    <a routerLink="privacy" class="privacy translate" data-lang-id="privacy">Terms of Use and Privacy Policy</a>
+    <a routerLink="privacy" class="privacy translate" data-lang-id="privacy">{{"privacy"|translate}}</a>
 
   </div>
 
