language "About" update

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,56 +2,56 @@
 <main class="">
   <div class="space-200px"></div>
   <h1>Brilliant Home</h1>
-<!--    <h1> {{"greeting" | translate}} </h1>-->
-  <h5 class="under-text translate" data-lang-id="under">{{"under"|translate}}</h5>
+<!--    <h1> {{"greeting" |}} </h1>-->
+  <h5 class="under-text" >{{"under"|translate}}</h5>
   <br>
   <br>
   <br>
   <div class="buttons">
     <a href="#">
-      <button class="btn-hover color-7  translate" data-lang-id="watch">{{ "watch" |translate }}</button>
+      <button class="btn-hover color-7 " >{{ "watch" |translate }}</button>
     </a>
   </div>
   <div class="space-200px"></div>
-  <div class="line dark-line translate" data-lang-id="chooseDesign">{{'chooseDesign' | translate}}</div>
+  <div class="line dark-line" >{{'chooseDesign' |translate}}</div>
   <div class="space-100px"></div>
   <div class="box">
     <div class="mini-box dark-box">
       <h2 class="h2text">Home Brilliant</h2>
-      <p class="text translate ptext" data-lang-id="welcome">{{'welcome' | translate}}</p>
+      <p class="text ptext">{{'welcome' |translate}}</p>
       <div class="buttons">
-        <button class="btn-hover color-7 modal-close  translate" data-lang-id="watch">{{ "watch" |translate }}</button>
+        <button class="btn-hover color-7 modal-close " >{{ "watch" |translate }}</button>
       </div>
     </div>
   </div>
   <div class="space-100px" id="home-why"></div>
-  <div class="line dark-line translate" data-lang-id="why">{{'why'|translate}}</div>
+  <div class="line dark-line" >{{'why'|translate}}</div>
   <div class="space-100px"></div>
 
 
 
   <div class="box2-index">
-    <h2 class="h2text-box2 translate pcolor" data-lang-id="cause1">{{'cause1'|translate}}</h2>
-    <p class="text-pbox translate ptext" data-lang-id="causetext1">{{'causetext1' | translate}}</p>
+    <h2 class="h2text-box2 pcolor" >{{'cause1'|translate}}</h2>
+    <p class="text-pbox ptext">{{'causetext1' |translate}}</p>
   </div>
   <div class="space-20px"></div>
   <div class="box3-index">
-    <h2 class="h2text-box3 translate pcolor" data-lang-id="cause2">{{'cause2' | translate}}</h2>
-    <p class="text-pbox translate ptext" data-lang-id="causetext2">{{'causetext2' | translate}}</p>
+    <h2 class="h2text-box3 pcolor" >{{'cause2' |translate}}</h2>
+    <p class="text-pbox ptext">{{'causetext2' |translate}}</p>
   </div>
   <div class="space-20px"></div>
   <div class="box2-index">
-    <h2 class="h2text-box2 translate pcolor" data-lang-id="cause3">{{'cause3'|translate}}</h2>
-    <p class="text-pbox translate ptext" data-lang-id="causetext3">{{'causetext3'|translate}}</p>
+    <h2 class="h2text-box2 pcolor" >{{'cause3'|translate}}</h2>
+    <p class="text-pbox ptext">{{'causetext3'|translate}}</p>
   </div>
   <div class="space-100px"></div>
   <div class="box4" id="homeb">
     <div class="mini-box4 dark-box">
       <h2 class="h2text ">Home Brilliant</h2>
-      <p class="text translate ptext" data-lang-id="box4-one">{{'box4-one' | translate}}</p>
-      <p class="text translate ptext" data-lang-id="box4-two">{{'box4-two' | translate}}</p>
+      <p class="text ptext" >{{'box4-one' |translate}}</p>
+      <p class="text ptext">{{'box4-two' |translate}}</p>
       <div class="buttons">
-        <a routerLink="catalog"><button class="btn-hover color-7  translate" data-lang-id="catalog">{{'catalog' | translate}}</button></a>
+        <a routerLink="catalog"><button class="btn-hover color-7 ">{{'catalog' |translate}}</button></a>
       </div>
     </div>
   </div>
