language "FAQ and Privacy" update

--- a/src/app/pages/auth-pages/login/login.component.html
+++ b/src/app/pages/auth-pages/login/login.component.html
@@ -1,17 +1,17 @@
 <main>
 
   <form >
-    <h1 class="h1" data-lang-id="logIn">Login in to an existing account</h1>
+    <h1 class="h1">{{'loginaut'|translate}}</h1>
 
     <div class="form-group">
-      <label for="ExampleEmail" data-lang-id="email">Email</label><br>
-      <input type="email" class="form-control" name="Email" id="ExampleEmail" aria-describedby="emailHelp" placeholder="Enter Email" data-lang-id="email_placeholder">
+      <label for="ExampleEmail">{{'email'|translate}}</label><br>
+      <input type="email" class="form-control" name="Email" id="ExampleEmail" aria-describedby="emailHelp" placeholder="{{'email_placeholder'|translate}}">
     </div>
 
     <div class="form-group">
-      <label for="ExamplePassword" data-lang-id="password">Password</label>
+      <label for="ExamplePassword" >{{'password'|translate}}</label>
       <br>
-      <input type="password" class="form-control" name="Password" id="ExamplePassword" placeholder="Enter Password" data-lang-id="password_placeholder">
+      <input type="password" class="form-control" name="Password" id="ExamplePassword" placeholder="{{'password_placeholder'| translate}}" >
     </div>
 
     <section class="space-40px"></section>
@@ -28,11 +28,11 @@
     <section class="space-40px"></section>
 
 
-    <button  type="submit" class="btn-hover color-2 dark-button7 btn-center" data-lang-id="logb">Login</button>
+    <button  type="submit" class="btn-hover color-2 dark-button7 btn-center">{{'logb'|translate}}</button>
 
     <section class="space-40px"></section>
 
-    <p class="center white-i"><span data-lang-id="notacc">You don't have an account then:</span> <a href="register" class="red-i"><span data-lang-id="reg">Register!</span></a></p>
+    <p class="center white-i"><span>{{'notacc'|translate}}</span> <a href="register" class="red-i"><span>{{'reg'|translate}}</span></a></p>
 
   </form>
 
