--- a/src/app/pages/faq/faq.component.html
+++ b/src/app/pages/faq/faq.component.html
@@ -1,63 +1,51 @@
 <main class="">
   <div class="space-100px"></div>
-  <h1 data-lang-id="84">Frequently asked questions</h1>
+  <h1>{{'84'|translate}}</h1>
   <br>
   <br>
   <div class="bgcolor">
     <div class="main">
       <br>
-      <h2 data-lang-id="85">Compensation for damaged real estate</h2>
+      <h2 >{{'85'|translate}}</h2>
       <p>
-        <span data-lang-id="86">
-          Compensation for damaged property is an important part of our interaction with clients. We understand that real estate can be exposed to various risks and provide clear and fair procedures for compensation in case of unforeseen circumstances.
-        </span>
+        <span >{{'86'|translate}}</span>
       </p>
-      <h3 data-lang-id="87" class="color">Our approach to compensation includes:</h3>
+      <h3  class="color">{{'87'|translate}}</h3>
       <ul class="margin2">
         <li>
-          <span data-lang-id="88" class="color">1. Professional Assessment:</span>
+          <span  class="color">{{'87'|translate}}</span>
           <br>
-          <span data-lang-id="89">
-            Our team of experts will conduct a professional assessment of property damage or destruction. This is an important stage for the exact determination of the amount of compensation.
-          </span>
+          <span >{{'89'|translate}}</span>
         </li>
         <br>
         <li>
-          <span data-lang-id="90" class="color">2. Transparency and Honesty:</span>
+          <span  class="color">{{'90'|translate}}</span>
           <br>
-          <span data-lang-id="91">
-            We strive to provide fair and transparent conditions for compensation payments, where each client can receive full information about the amount and basis of payments.
-          </span>
+          <span >{{'91'|translate}} </span>
         </li>
         <br>
         <li>
-          <span data-lang-id="92" class="color">3. Speed and Efficiency:</span>
+          <span  class="color">{{'92'|translate}}</span>
           <br>
-          <span data-lang-id="93">
-            Our goal is to provide quick and efficient resolution of compensation issues. We understand that time is very important for our clients, so we work to minimize processing and payout times.
-          </span>
+          <span >{{'93'|translate}}</span>
         </li>
         <br>
         <li>
-          <span data-lang-id="94" class="color">4. Individual Approach:</span>
+          <span  class="color">{{'94'|translate}}</span>
           <br>
-          <span data-lang-id="95">
-            Each situation is unique, and we consider the individual characteristics of each case when determining compensation. Our goal is to provide an approach adapted to specific needs.
-          </span>
+          <span >{{'95'|translate}}</span>
         </li>
         <br>
         <li>
-          <span data-lang-id="96" class="color">5. Protection of the Client's Interests:</span>
+          <span  class="color">{{'96'|translate}}</span>
           <br>
-          <span data-lang-id="97">
-            We always stand by the interests of our clients and do everything we can to ensure a fair and appropriate amount of compensation.
-          </span>
+          <span >{{'97'|translate}}</span>
         </li>
         <br>
       </ul>
-      <span data-lang-id="98">Through our approach to compensation for damaged and destroyed properties, we create long-term partnerships with our clients and strive to ensure their complete satisfaction with our services</span>
+      <span >{{'98'|translate}}</span>
       <hr>
-      <h2 data-lang-id="99" class="center color">Please note: the situation is changing, so the data is current as of 07.05.2024. We will supplement the information!</h2>
+      <h2  class="center color">{{'99'|translate}}</h2>
     </div>
     <br>
   </div>
@@ -71,117 +59,95 @@
 
     <div class="main">
       <br>
-      <h2 data-lang-id="108">Frequently asked questions about investments in the first place</h2>
+      <h2 >{{'108'|translate}}</h2>
 
-      <h3 data-lang-id="109">Investments at the beginning: what to pay attention to</h3>
+      <h3 >{{'109'|translate}}</h3>
       <p>
-        <span data-lang-id="110">
-          Investing in real estate for the first time is an important decision, and careful analysis of various aspects can determine your success in this type of investment. Here's what you should pay attention to:
-        </span>
+        <span >{{'110'|translate}} </span>
 
       <ul class="margin2">
         <li>
-          <span data-lang-id="111" class="color">1. Location:</span>
+          <span  class="color">{{'111'|translate}}</span>
           <br>
-          <span data-lang-id="112">
-            Determine how attractive the location of the object is. Proximity to infrastructure, transport and other services can significantly affect the value of real estate in the future.
-          </span>
+          <span >{{'112'|translate}} </span>
         </li>
 
         <br>
 
         <li>
-          <span data-lang-id="113" class="color">2. Builder and Development: </span>
+          <span  class="color">{{'112'|translate}} </span>
           <br>
-          <span data-lang-id="114">
-            Research the developer's reputation and development characteristics. The quality of building materials, previous projects and the developer's rating are key factors.
-          </span>
+          <span >{{'114'|translate}}</span>
         </li>
 
         <br>
 
         <li>
-          <span data-lang-id="115" class="color">3. Planning and Design:</span>
+          <span  class="color">{{'115'|translate}}:</span>
           <br>
-          <span data-lang-id="116">
-            Analyze the layout of the apartments and the overall design of the building. This can affect the attractiveness to potential tenants or buyers.
-          </span>
+          <span >{{'116'|translate}}</span>
         </li>
 
         <br>
 
         <li>
-          <span data-lang-id="117" class="color">4. Price Dynamics:</span>
+          <span  class="color">{{'117'|translate}}</span>
           <br>
-          <span data-lang-id="118">
-            Watch real estate prices in the region. Analysis of price dynamics will help to understand the potential growth of the value of your investment.
-          </span>
+          <span >{{'118'|translate}}</span>
         </li>
 
         <br>
 
         <li>
-          <span data-lang-id="119" class="color">5. Legal Aspects:</span>
+          <span  class="color">{{'119'|translate}}</span>
           <br>
-          <span data-lang-id="120">
-            Check legal documents related to construction and ownership. This is important to avoid unforeseen legal problems in the future.
-          </span>
+          <span >{{'120'|translate}}</span>
         </li>
 
         <br>
 
         <li>
-          <span data-lang-id="121" class="color">6. Amenities and Services:</span>
+          <span  class="color">{{'121'|translate}}</span>
           <br>
-          <span data-lang-id="122">
-            Evaluate the availability of amenities and services such as parking, sports fields, security and others. This can make it more attractive to tenants or buyers.
-          </span>
+          <span >{{'122'|translate}}</span>
         </li>
 
         <br>
 
         <li>
-          <span data-lang-id="123" class="color">7. Potential Rental Income:</span>
+          <span  class="color">{{'123'|translate}}</span>
           <br>
-          <span data-lang-id="124">
-            Calculate the potential rental income. Determine how it compares to other investments and whether you are satisfied with this level of return
-          </span>
+          <span >{{'124'|translate}}</span>
         </li>
 
         <br>
 
         <li>
-          <span data-lang-id="125" class="color">8. Financial Sustainability of the Developer:</span>
+          <span  class="color">{{'125'|translate}}</span>
           <br>
-          <span data-lang-id="126">
-            Make sure the developer is financially stable. This is important to complete construction and maintain quality.
-          </span>
+          <span >{{'126'|translate}}</span>
         </li>
 
         <br>
 
         <li>
-          <span data-lang-id="127" class="color">9. District Planning Rules:</span>
+          <span  class="color">{{'127'|translate}}</span>
           <br>
-          <span data-lang-id="128">
-            Check your local planning and development regulations. This will help to avoid unpleasant surprises during expansion or modification.
-          </span>
+          <span >{{'128'|translate}}</span>
         </li>
 
         <br>
 
         <li>
-          <span data-lang-id="129" class="color">10. Infrastructure Projects:</span>
+          <span  class="color">{{'129'|translate}}</span>
           <br>
-          <span data-lang-id="130">
-            Explore planned infrastructure projects in the region. This can affect the development of the area and increase its value.
-          </span>
+          <span >{{'130'|translate}}</span>
         </li>
 
         <br>
 
       </ul>
-      <span data-lang-id="131">Investing in the first place requires caution and analysis. Pay attention to various factors to make an informed decision and achieve a successful outcome in real estate investment.</span>
+      <span >{{'131'|translate}}</span>
 
       <br>
 
@@ -197,28 +163,22 @@
   <div class="bgcolor">
     <br>
     <div class="main">
-      <h2 data-lang-id="140">Frequently asked questions about the service</h2>
-      <h3 data-lang-id="141" class="color">We have collected and verified information about all new buildings and apartment complexes so that you can choose the best home for you.</h3>
+      <h2 >{{'140'|translate}}</h2>
+      <h3  class="color">{{'141'|translate}}</h3>
       <p>
-        <span data-lang-id="142">
-          Our mission is to provide you with complete and reliable information about all new buildings and residential complexes. We have carefully checked and collected data so that you can choose the best option for you. Our property descriptions contain important data about location, housing types, infrastructure and other key characteristics. We provide photo and video reviews so that you can better understand the appearance and interior design of the objects. You can evaluate the presence of nearby shops, schools and other infrastructure. Detailed price schedules will help you determine how the selected objects fit into your budget. We also provide an opportunity to get acquainted with the reviews of real residents and get insights into life in specific residential complexes. Our team is ready to provide you with individual advice and answer all your questions to provide you with the full range of information for your decision. Choose the best home for you with our help and make your choice based on objective and detailed information.
-        </span>
+        <span >{{'142'|translate}}</span>
       </p>
       <hr>
-      <h2 data-lang-id="143">Can I buy an apartment on HomeBrilliant?</h2>
-      <h3 data-lang-id="144" class="color">You cannot buy an apartment on HomeBrilliant New Construction</h3>
+      <h2 >{{'143'|translate}}</h2>
+      <h3  class="color">{{'144'|translate}}</h3>
       <p>
-        <span data-lang-id="145">
-          Sorry for any misunderstanding. At HomeBrilliant, we offer you not only the opportunity to buy an apartment, but also access to complete information about new buildings and residential complexes. Our platform is designed to provide you with all the information you need to make informed real estate decisions. If you have specific questions or need additional assistance, our team of experts is here to support you. Please feel free to reach out for advice or other information that may be useful for your life or real estate investment.
-        </span>
+        <span >{{'145'|translate}}</span>
       </p>
       <hr>
-      <h2 data-lang-id="146">Can I find out apartment prices on HomeBrilliant?</h2>
-      <h3 data-lang-id="147" class="color">At HomeBrilliant, we check prices manually.</h3>
+      <h2 >{{'146'|translate}}</h2>
+      <h3  class="color">{{'147'|translate}}</h3>
       <p>
-        <span data-lang-id="148">
-          Sorry for any misunderstanding. Unfortunately, I do not have specific information about the ability to view apartment prices on HomeBrilliant, as I do not have direct access to the Internet or specific data from the HomeBrilliant portal. However, I can advise you to check the prices and available properties on the official HomeBrilliant website or contact their support directly for up-to-date information. If you have specific questions or other needs, I am ready to help to the best of my ability.
-        </span>
+        <span >{{'148'|translate}}</span>
       </p>
       <br>
     </div>
