--- a/src/app/shared/faq-conteiner2/faq-conteiner2.component.html
+++ b/src/app/shared/faq-conteiner2/faq-conteiner2.component.html
@@ -1,36 +1,36 @@
 <div class="container-faq">
   <div class="accordion">
     <div class="accordion-item">
-      <button id="accordion-button-5" aria-expanded="false"><span class="accordion-button" data-lang-id="132">What are the guarantees?</span></button>
+      <button id="accordion-button-5" aria-expanded="false"><span class="accordion-button" >{{'132'|translate}}</span></button>
       <div class="accordion-content">
-        <p data-lang-id="133">We maintain high standards of confidentiality and security, use legal advice and provide all necessary information to ensure the reliability of your transaction</p>
+        <p >{{'133'|translate}}</p>
       </div>
     </div>
 
     <br>
 
     <div class="accordion-item">
-      <button id="accordion-button-6" aria-expanded="false"><span class="accordion-button" data-lang-id="134">What are the investment opportunities</span></button>
+      <button id="accordion-button-6" aria-expanded="false"><span class="accordion-button" >{{'134'|translate}}</span></button>
       <div class="accordion-content">
-        <p data-lang-id="135">Our realtors will help you find properties for investment, taking into account potential income and risks.</p>
+        <p >{{'135'|translate}}</p>
       </div>
     </div>
 
     <br>
 
     <div class="accordion-item">
-      <button id="accordion-button-7" aria-expanded="false"><span class="accordion-button" data-lang-id="136">How to choose the best mortgage offer?</span></button>
+      <button id="accordion-button-7" aria-expanded="false"><span class="accordion-button" >{{'136'|translate}}</span></button>
       <div class="accordion-content">
-        <p data-lang-id="137">We will advise you to understand the terms of lending, compare the rates and conditions of different banks, and help you decide on the most profitable offer.</p>
+        <p >{{'137'|translate}}</p>
       </div>
     </div>
 
     <br>
 
     <div class="accordion-item">
-      <button id="accordion-button-8" aria-expanded="false"><span class="accordion-button" data-lang-id="138">What are the recommendations for preparing housing for sale?</span></button>
+      <button id="accordion-button-8" aria-expanded="false"><span class="accordion-button" >{{'138'|translate}}</span></button>
       <div class="accordion-content">
-        <p data-lang-id="139"> We will help you get the property in order, make the necessary repairs and prepare an attractive presentation material.</p>
+        <p >{{'139'|translate}}</p>
       </div>
     </div>
   </div>
