--- a/src/app/shared/faq-conteiner/faq-conteiner.component.html
+++ b/src/app/shared/faq-conteiner/faq-conteiner.component.html
@@ -1,36 +1,36 @@
 <div class="container-faq">
   <div class="accordion">
     <div class="accordion-item">
-      <button id="accordion-button-1" aria-expanded="false"><span class="accordion-button" data-lang-id="100" >What services does your real estate agency provide?</span></button>
+      <button id="accordion-button-1" aria-expanded="false"><span class="accordion-button"  >{{'100'|translate}}</span></button>
       <div class="accordion-content">
-        <p data-lang-id="101"> We offer a full range of services, including buying, selling and renting real estate, legal advice and valuation of your properties.</p>
+        <p >{{'101'|translate}}</p>
       </div>
     </div>
 
     <br>
 
     <div class="accordion-item">
-      <button id="accordion-button-2" aria-expanded="false"><span class="accordion-button" data-lang-id="102">How long does the real estate sale process take?</span></button>
+      <button id="accordion-button-2" aria-expanded="false"><span class="accordion-button" >{{'102'|translate}}</span></button>
       <div class="accordion-content">
-        <p data-lang-id="103">The timing of the sale depends on a number of factors, such as market conditions, property type and location. We do our best for a fast and efficient process.</p>
+        <p >{{'103'|translate}}</p>
       </div>
     </div>
 
     <br>
 
     <div class="accordion-item">
-      <button id="accordion-button-3" aria-expanded="false"><span class="accordion-button" data-lang-id="104">What costs are associated with the services of a realtor?</span></button>
+      <button id="accordion-button-3" aria-expanded="false"><span class="accordion-button" >{{'104'|translate}}</span></button>
       <div class="accordion-content">
-        <p data-lang-id="105">Costs may include realtor commissions, taxes, and other expenses. Detailed costs will be honestly discussed at the beginning of the cooperation.</p>
+        <p >{{'105'|translate}}</p>
       </div>
     </div>
 
     <br>
 
     <div class="accordion-item">
-      <button id="accordion-button-4" aria-expanded="false"><span class="accordion-button" data-lang-id="106">How to choose an ideal real estate object?</span></button>
+      <button id="accordion-button-4" aria-expanded="false"><span class="accordion-button" >{{'106'|translate}}</span></button>
       <div class="accordion-content">
-        <p data-lang-id="107">Our realtors will help you understand your needs, budget and choose the optimal object, taking into account all your requirements.</p>
+        <p >{{'107'|translate}}</p>
       </div>
     </div>
   </div>
