--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -35,15 +35,15 @@
                     <div class="language-list dark-list">
                         <ul class="listul">
                             <li class="listli">
-                                <a  (click)="switchLanguage('en')" class="lista hovera dark-lista">
+                                <a  (click)="switchLanguage('en')" class="lista hovera hoverbla dark-lista">
                                     <img src="../../../assets/img/logo/eng.png" class="flag" alt="English Flag" height="552" width="920">
-                                    <span>{{"eng" | translate}}</span>
+                                    <span class="color-ded-white">{{"eng" | translate}}</span>
                                 </a>
                             </li>
                             <li class="listli">
                                 <a  (click)="switchLanguage('ua')" class="lista hovera dark-lista">
                                     <img src="../../../assets/img/logo/ukr.png" class="flag" alt="Ukraine Flag" height="379" width="626">
-                                    <span>{{"ukr" | translate}}</span>
+                                    <span class="color-ded-white">{{"ukr" | translate}}</span>
                                 </a>
                             </li>
                         </ul>
