--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -5,15 +5,13 @@
 
   <div class="about-container">
     <div class="about-text">
-      <p class="about-p " >{{'aims'|translate}}
-      </p>
+      <p class="about-p " >{{'aims'|translate}}</p>
       <hr class="line dark-line">
       <div class="space-100px"></div>
 
       <div class="box2">
         <h2 class="h2text-box2 ">
-          <span class="prod " >{{'invest'|translate}}
-          </span>
+          <span class="prod " >{{'invest'|translate}}</span>
           <span > {{'garant'|translate}}</span>
         </h2>
         <p class="text-pbox ">
@@ -56,7 +54,7 @@
 
       <div class="box2">
         <h2 class="h2text-box2 " >
-          <span class="prod">{{'prodavec'| translate}}</span> <span data-lang-id="garant">{{'garant'|translate}}:</span>
+          <span class="prod">{{'prodavec'| translate}}</span> <span data-lang-id="garant">{{'garant'|translate}}</span>
         </h2>
         <p class="text-pbox">
         <ul class="ul-text">
@@ -75,7 +73,7 @@
         <ul class="ul-text">
           <li><span class="prod2" >{{'filter'|translate}}</span> <span >{{'zavd'|translate}}</span></li>
           <br>
-          <li><span class="prod2" >{{'vivche' |translate}}:</span> <span >{{'detal'|translate}}</span></li>
+          <li><span class="prod2" >{{'vivche' |translate}}</span> <span >{{'detal'|translate}}</span></li>
           <br>
           <li><span class="prod2" >{{'expertni'|translate}}</span> <span >{{'nashcomand'|translate}}</span></li>
           <br>
