--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -314,7 +314,6 @@ a {
 
   }
   .header .menu::before {
-    content: "";
     position: absolute;
     right: 0;
     top: 0;
@@ -360,7 +359,7 @@ a {
     display: none;
   }
   .header.mobile .item:hover::after {
-    width: 50%;
+    /*width: 50%;*/
   }
 }
 
@@ -402,7 +401,7 @@ a {
 #loginButton,
 #toggleButton {
   display: flex;
-  align-items: left;
+  align-items: start;
   cursor: pointer;
   background-color: transparent;
   border: none;
@@ -487,11 +486,11 @@ a {
   flex-grow: 1; /* Растягиваем блок span, чтобы текст занимал доступное пространство */
 }
 
-.language-list .hovera:hover {
-  background-color: #4d4d4d3d;
-  border-radius: 20px;
+/*.language-list .hovera:hover {*/
+/*  background-color: #4d4d4d3d;*/
+/*  border-radius: 20px;*/
 
-}
+/*}*/
 
 .language-dropdown button {
   border: none;
@@ -550,7 +549,7 @@ a {
 
 /* Style for the dropdown links on hover */
 .login-dropdown-content a:hover {
-  background-color: #4d4d4d3d;
+  background-color: rgba(43, 18, 76, 0.6);
 }
 
 
