--- a/src/app/pages/profile/profile/profile.component.html
+++ b/src/app/pages/profile/profile/profile.component.html
@@ -8,47 +8,41 @@
             <a href="#">
               <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt>
             </a>
-            <h1>Camila Smith</h1>
+            <h1>...NAME...</h1>
           </div>
           <ul class="nav nav-pills nav-stacked">
             <!--          <li class="active"><a> <i class="fa fa-user"></i> Profile</a></li>-->
-            <li ><a href="newads"> <i class="fa fa-plus"></i> Аdd ogoloshenya</a></li>
-            <li ><a href="change"> <i class="fa fa-edit"></i> Edit profile</a></li>
+            <li ><a href="newads"> <i class="fa fa-plus"></i>{{'159'|translate}}</a></li>
+            <li ><a href="change"> <i class="fa fa-edit"></i> {{'160'|translate}}</a></li>
           </ul>
         </div>
       </div>
       <div class="profile-info col-md-9">
 
         <div class="panel">
-          <div class="bio-graph-heading">
-            Aliquam ac magna metus. Nam sed arcu non tellus fringilla fringilla ut vel ispum. Aliquam ac magna metus.
-          </div>
+          <div class="bio-graph-heading"><h1 class="">{{'161'|translate}}</h1></div>
           <div class="panel-body bio-graph-info">
-            <h1 class="colorbl">Bio Graph</h1>
+              <br>
             <div class="row">
               <div class="bio-row">
-                <p><span>First Name </span>: Camila</p>
+                <p><span>{{'163'|translate}}</span>: Camila</p>
               </div>
               <div class="bio-row">
-                <p><span>Last Name </span>: Smith</p>
+                <p><span>{{'164'|translate}} </span>: Smith</p>
               </div>
               <div class="bio-row">
-                <p><span>Country </span>: Australia</p>
+                <p><span>{{'165'|translate}} </span>: Australia</p>
               </div>
               <div class="bio-row">
-                <p><span>Birthday</span>: 13 July 1983</p>
+                <p><span>{{'167'|translate}} </span>: UI Designer</p>
               </div>
               <div class="bio-row">
-                <p><span>Occupation </span>: UI Designer</p>
+                <p><span>{{'168'|translate}} </span>: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="95ffe6f8fce1fdd5f3f9f4e1f9f4f7bbf6faf8">[email&#160;protected]</a></p>
               </div>
               <div class="bio-row">
-                <p><span>Email </span>: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="95ffe6f8fce1fdd5f3f9f4e1f9f4f7bbf6faf8">[email&#160;protected]</a></p>
+                <p><span>{{'169'|translate}} </span>: (12) 03 4567890</p>
               </div>
               <div class="bio-row">
-                <p><span>Mobile </span>: (12) 03 4567890</p>
-              </div>
-              <div class="bio-row">
-                <p><span>Phone </span>: 88 (02) 123456</p>
               </div>
             </div>
           </div>
