--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -26,7 +26,7 @@
 
   <hr>
   <div class="footer-bottom ">
-    <p>copyright &copy; 2024 <a routerLink="home"> HomeBrilliant.</a></p>
+    <p>copyright &copy; 2024 <a routerLink=""> HomeBrilliant.</a></p>
   </div>
 
 </footer>
