bug language fix

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -41,7 +41,7 @@
                                 </a>
                             </li>
                             <li class="listli">
-                                <a  (click)="switchLanguage('ua')" class="lista hovera dark-lista">
+                                <a  (click)="switchLanguage('uk')" class="lista hovera dark-lista">
                                     <img src="../../../assets/img/logo/ukr.png" class="flag" alt="Ukraine Flag" height="379" width="626">
                                     <span class="color-ded-white">{{"ukr" | translate}}</span>
                                 </a>
