--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -1,8 +1,3 @@
-@import "dropdawn/language.css";
-@import "dropdawn/login.css";
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
-
-
 
 body {
   font-family: "Roboto", sans-serif;
@@ -314,6 +309,7 @@ a {
 
   }
   .header .menu::before {
+    content: "";
     position: absolute;
     right: 0;
     top: 0;
@@ -359,7 +355,7 @@ a {
     display: none;
   }
   .header.mobile .item:hover::after {
-    /*width: 50%;*/
+    width: 50%;
   }
 }
 
@@ -486,11 +482,11 @@ a {
   flex-grow: 1; /* Растягиваем блок span, чтобы текст занимал доступное пространство */
 }
 
-/*.language-list .hovera:hover {*/
-/*  background-color: #4d4d4d3d;*/
-/*  border-radius: 20px;*/
+.language-list .hovera:hover {
+  background-color: #4d4d4d3d;
+  border-radius: 20px;
 
-/*}*/
+}
 
 .language-dropdown button {
   border: none;
@@ -549,7 +545,5 @@ a {
 
 /* Style for the dropdown links on hover */
 .login-dropdown-content a:hover {
-  background-color: rgba(43, 18, 76, 0.6);
+  background-color: #4d4d4d3d;
 }
-
-
