--- a/src/assets/switch/switch.css
+++ b/src/assets/switch/switch.css
@@ -366,4 +366,14 @@ body.dark .color{
 /*=========================================== FAQ ===========================================================================*/
 
 /*=========================================== END FAQ ===========================================================================*/
-
+body.dark .cookie-container{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  border-top: 2px solid rgb(241, 144, 109);
+  background-color:  #545454; /* Цвет фона с прозрачностью */
+  padding: 20px;
+  text-align: center;
+  backdrop-filter: none; /* Отключаем размытие фона */
+}
