--- a/src/app/pages/about/css/main.css
+++ b/src/app/pages/about/css/main.css
@@ -6,6 +6,11 @@ body{
     padding: 0;
 }
 
+main{
+    line-height: 1; /* Adjust line height here */
+
+}
+
 
 /* h1 {
     font-family: 'Dancing Script', cursive;
@@ -20,9 +25,9 @@ body{
 } */
 
 h1 {
+    line-height: 80px; /* Adjust line height here */
     font-family: 'Dancing Script', cursive;
     font-size: 100px;
-    line-height: 65px;
     text-align: center;
     max-width: 60%;
     min-width: 200px;
@@ -30,9 +35,8 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    line-height:1;
-
 }
+
 
 
 .under-text {
@@ -97,6 +101,10 @@ h1 {
 }
 
 @media (min-width: 768px) {
+    .h1{
+        line-height: 1; /* Adjust line height here */
+    }
+
     .box2, .box3 {
         width: 45%;
     }
