--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 @import "assets/switch/switch.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
