--- a/src/app/pages/cookie-permission-dialog/cookie-permission-dialog.component.html
+++ b/src/app/pages/cookie-permission-dialog/cookie-permission-dialog.component.html
@@ -1,7 +1,7 @@
 
 <div class="cookie-container">
     <h1>{{'170'|translate}}</h1>
-    <p>{{'171'|translate}}</p>
+    <p>{{'171'|translate}} <a href="privacy">Privacy</a> </p>
     <button mat-raised-button color="primary" (click)="allowCookies()">{{ '172'|translate }}</button>
     <button mat-button onclick="window.location.href='https://www.google.com.ua'">{{'173'| translate}}</button>
 
