--- a/src/app/pages/profile/change-profile/change-profile.component.css
+++ b/src/app/pages/profile/change-profile/change-profile.component.css
@@ -1,6 +1,24 @@
 @import "css/all.css";
 @import "css/space.css";
 @import "css/button.css";
+ main{
+
+ }
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.input {
+}
+
+img{
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  background: #dfdfdf;
+}
 
 .img-account-profile {
   height: 10rem;
