--- a/src/app/pages/profile/change-profile/change-profile.component.html
+++ b/src/app/pages/profile/change-profile/change-profile.component.html
@@ -8,12 +8,11 @@
         <div class="card mb-4 mb-xl-0">
           <!--          <div class="card-header align-content-xl-center">Profile Picture</div>-->
           <div class="card-body text-center">
-
-            <img class="img-account-profile rounded-circle mb-2" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt>
-
-            <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
-
-            <button class="btn-hover color-4 dark" type="button">Upload new image</button>
+              <img class="img-account-profile rounded-circle mb-2" src="https://bootdey.com/img/Content/avatar/avatar1.png" alt>
+              <div class="small font-italic text-muted mb-4">JPG or PNG no larger than 5 MB</div>
+              <div class="container">
+                  <input class="input" type="file" (change)="imageElement($event)">
+              </div>
           </div>
         </div>
       </div>
