--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,8 +8,8 @@
   <br>
   <br>
   <div class="buttons">
-    <a href="#">
-      <button class="btn-hover color-7 " >{{ "watch" |translate }}</button>
+    <a routerLink="about">
+      <button class="btn-hover color-7 " >{{ "174" |translate }}</button>
     </a>
   </div>
   <div class="space-200px"></div>
@@ -20,7 +20,7 @@
       <h2 class="h2text">Home Brilliant</h2>
       <p class="text ptext">{{'welcome' |translate}}</p>
       <div class="buttons">
-        <button class="btn-hover color-7 modal-close " >{{ "watch" |translate }}</button>
+        <button class="btn-hover color-7 modal-close " >{{ "175" |translate }}</button>
       </div>
     </div>
   </div>
