--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
     <br>
     <br>
   <div class="footer-content">
@@ -16,10 +16,10 @@
     <p class="translate" data-lang-id="hb">{{"hb" | translate}}
     </p>
     <div class="flex-center">
-      <i class="fa fa-github fa-4x icon-3d"></i>
-      <i class="fa fa-twitter fa-4x icon-3d"></i>
-      <i class="fa fa-facebook fa-4x icon-3d"></i>
-      <i class="fa fa-instagram fa-4x icon-3d"></i>
+        <a href="https://github.com/Emeteus" target="_blank"><i class="fa fa-github fa-4x icon-3d"></i></a>
+        <a href="https://twitter.com/home" target="_blank"><i class="fa fa-twitter fa-4x icon-3d"></i></a>
+        <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook fa-4x icon-3d"></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram fa-4x icon-3d"></i></a>
     </div>
     <br>
     <a routerLink="privacy" class="privacy translate" data-lang-id="privacy">{{"privacy"|translate}}</a>
@@ -28,7 +28,7 @@
 
   <hr>
   <div class="footer-bottom ">
-    <p>copyright &copy; 2024 <a routerLink=""> HomeBrilliant.</a></p>
+    <p>copyright &copy; 2024 <a> HomeBrilliant.</a></p>
   </div>
 
 </footer>
