--- a/src/app/pages/view/view.component.html
+++ b/src/app/pages/view/view.component.html
@@ -34,7 +34,7 @@
         <div class="col-md-6 col-md-offset-1 col-sm-12 col-xs-12">
           <h2 class="name text-black">
             Product Name Title Here
-            <small>Product by <a href="javascript:void(0);">Adeline</a></small>
+            <small>Product by <a href="profile">Adeline</a></small>
 
           </h2>
           <hr/>
