--- a/src/assets/switch/switch.css
+++ b/src/assets/switch/switch.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  /*background-image: url('theme/bg_white.png');*/
+  background-image: url('theme/bg_white.png');
   background-color: #d6cfbd;
   overflow-x: hidden;
   transition: background 0.2s linear;
@@ -12,7 +12,7 @@ body {
 }
 
 body.dark {
-  /*background-image: url('theme/bg_black.png');*/
+  background-image: url('theme/bg_black.png');
   background-color: rgb(13, 17, 23);
   color: white;
   transition: background 0.2s linear;
